# IK-Paneli

./: .gitignore  .replit  config.py  create_admin.py  database.py  hr.db  main.py  pyproject.toml  replit.nix  run.py  test_db.py
app/: __init__.py  admin.py  auth.py  create_admin.py  dashboard.py  data_management.py  database.py  leave.py  performance.py  personnel.py  utils.py
app/templates/: add_personnel.html  approval_list.html  base.html  dashboard.html  data_management.html  edit_user.html  forgot_password.html  leave_management.html  login.html  password_requests.html  performance_management.html  performance_period_detail.html  personnel_list.html  personnel_manage.html  profile.html  show_password.html  unlinked_user.html  user_management.html
attached_assets/: İŞVEREN MALİYETİ (1)_1752414284043.xlsx
templates/: add_personnel.html  base.html  cost_analysis.html  dashboard.html  edit_user.html  forgot_password.html  leave_management.html  login.html  password_requests.html  performance_management.html  performance_period_detail.html  personnel_list.html  personnel_manage.html  profile.html  show_password.html  unlinked_user.html  user_management.html
templates/templates/: performance_period_detail.html
tests/: conftest.py  test_auth.py  test_data_management.py  test_leave.py  test_performance.py  test_personnel.py
