[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "werkzeug>=3.0.0",
    "fpdf2>=2.7.4",
    "fpdf>=1.7.2",
    "pytest>=8.0.0"
]
